objects/sumoapp__Service__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__BufferTimePost__c</fullName>
        <inlineHelpText>If set, SUMO will create a Post-Buffer appointment after the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Post-Buffer Time (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__BufferTimePre__c</fullName>
        <inlineHelpText>If set, SUMO will create a Pre-Buffer appointment before the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Pre-Buffer Time (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <defaultValue>&quot;#5679C0&quot;</defaultValue>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__FontColor__c</fullName>
        <label>Font Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationOptions__c</fullName>
        <label>Online Scheduler Location Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VID_CONFERENCE</fullName>
                    <label>Video Conference</label>
                </value>
                <value>
                    <fullName>PHONE_INBOUND</fullName>
                    <label>Phone - You will call us</label>
                </value>
                <value>
                    <fullName>OUR_LOCATION</fullName>
                    <label>Our Location</label>
                </value>
                <value>
                    <fullName>IN_PERSON</fullName>
                    <label>In Person</label>
                </value>
                <value>
                    <fullName>IN_HOUSE</fullName>
                    <label>Your Location</label>
                </value>
                <value>
                    <fullName>VIRTUAL_EVENT</fullName>
                    <label>Virtual Event</label>
                </value>
                <value>
                    <fullName>WEB_CONFERENCE</fullName>
                    <isActive>false</isActive>
                    <label>WEB_CONFERENCE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Logo__c</fullName>
        <label>Logo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__RescheduleLimit__c</fullName>
        <inlineHelpText>By entering a numberic value you are defining the # of times a participant can reschedule an appointment with this service. Blank value equals unlimited.</inlineHelpText>
        <label>Reschedule Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__RescheduleMessage__c</fullName>
        <inlineHelpText>The message entered here will be presented to the participant if they attempt to reschedule past the amount of times entered in the limit field.</inlineHelpText>
        <label>Reschedule Message</label>
        <type>TextArea</type>
    </fields>
    <label>SUMO Service/Skill</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Service__c.sumoapp__Service</value>
        </filters>
        <label>All Services</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllSkills</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Service__c.sumoapp__Skill</value>
        </filters>
        <label>All Skills</label>
    </listViews>
    <nameField>
        <label>Service/Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Services/Skills</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__Service</fullName>
        <active>true</active>
        <label>Appt Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Skill</fullName>
        <active>true</active>
        <label>Host Skills</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sumoapp__RescheduleMessageIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(sumoapp__RescheduleLimit__c)),
ISBLANK(sumoapp__RescheduleMessage__c)
)</errorConditionFormula>
        <errorDisplayField>sumoapp__RescheduleMessage__c</errorDisplayField>
        <errorMessage>Reschedule Message should be populated if Reschedule Limit is populated</errorMessage>
    </validationRules>
</CustomObject>